# activate

./: .gitignore  Cargo.toml  README.md  READMe.md  activate.toml
.activate/: env.json
.devcontainer/: devcontainer.json
.github/workflows/: release.yml
src/: errors.rs  main.rs
tests/: README.md  activate.toml  mod.rs
tests/.activate/: .gitignore
tests/.activate/dev/: dev_file1
tests/.activate/prod/: prod_file1
tests/.activate/test/: test_file3
tests/another_active_dir/: activate.toml
tests/another_active_dir/.activate/: .gitignore
tests/another_active_dir/another_active_dir/: activate.toml
tests/another_active_dir/another_active_dir/.activate/: .gitignore
tests/another_active_dir/test/: test_file4
