[package]
name = "activate"
description = "A sane way to manage environment-specific configurations."
version = "0.3.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/mcmah309/activate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4", features=["derive"]}
toml = "0.8"
serde_json = "1"
serde = {version = "1", features=["derive"]}
ignore = "0.4"
num_cpus = "1"
crossbeam-channel = "0.5"
error_set = { git = "https://github.com/mcmah309/error_set.git", branch = "master" }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
dotenv = "0.15"